// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/components/elements/atoms/NativeElement.vue snapshot nested svg tree 1`] = `
<g
  data-id=""
  data-type="element"
  fill="red"
  style="fill: red;"
>
  <text
    data-id="text_1"
    data-type="element"
  >
    text1
  </text>
  <text
    data-id="text_2"
    data-type="element"
  >
    text1
    text2
  </text>
</g>
`;

exports[`src/components/elements/atoms/NativeElement.vue snapshot selected 1`] = `
<g
  data-id=""
  data-type="element"
  fill="orange"
  stroke="orange"
  style="fill: orange; stroke: orange;"
>
  <text
    data-id="text_1"
    data-type="element"
    fill="orange"
    stroke="orange"
    style="fill: orange; stroke: orange;"
  >
    text1
  </text>
  <text
    data-id="text_2"
    data-type="element"
    fill="orange"
    stroke="orange"
    style="fill: orange; stroke: orange;"
  >
    text1
    text2
  </text>
</g>
`;
